syntax = "proto3";
package blockcrypt;

// BlockCrypt sets the type of block crypto to use.
enum BlockCrypt {
  // BlockCrypt_UNKNOWN defaults to BlockCrypt_AES256
  BlockCrypt_UNKNOWN = 0;
  // BlockCrypt_AES256 is AES 256-bit block encryption.
  BlockCrypt_AES256 = 1;
  // BlockCrypt_AES128 is AES 128-bit block encryption.
  BlockCrypt_AES128 = 2;
  // BlockCrypt_AES192 is AES 192-bit block encryption.
  BlockCrypt_AES192 = 3;
  // BlockCrypt_SM4_16 is SM4 16-bit block encryption.
  BlockCrypt_SM4_16 = 4;
  // BlockCrypt_TEA16 is 16-bit TEA block encryption.
  BlockCrypt_TEA16 = 5;
  // BlockCrypt_XOR is simple XOR block encryption.
  BlockCrypt_XOR = 6;
  // BlockCrypt_NONE is unencrypted.
  BlockCrypt_NONE = 7;
  // BlockCrypt_BLOWFISH is blowfish 32-bit block encryption.
  BlockCrypt_BLOWFISH = 8;
  // BlockCrypt_TWOFISH is twofish 32-bit block encryption.
  BlockCrypt_TWOFISH = 9;
  // BlockCrypt_CAST5 is cast5 16bit block encryption.
  BlockCrypt_CAST5 = 10;
  // BlockCrypt_3DES is 3des 24-bit block encryption.
  BlockCrypt_3DES = 11;
  // BlockCrypt_XTEA is xtea 16-bit block encryption.
  BlockCrypt_XTEA = 12;
  // BlockCrypt_SALSA20 is salsa20 32-bit block encryption.
  BlockCrypt_SALSA20 = 13;
}